--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,12 @@ name = "BinaryMatrixLoading"
 uuid = "dca08610-faab-11e9-3b61-a321b4d694da"
 authors = ["Jason Eckstein <jekyllstein@gmail.com>"]
 version = "0.1.0"
+
+[compat]
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
